correction de l api creation et modification de enquete